# AI-agents-HW6

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  PRD.md  README.md  config.json  main.py  pyproject.toml  todo.md
deployment/: README.md  cloudflared.example.yml
docs/: PHASE_0_BASELINE.md  PHASE_0_VERIFICATION.md  PHASE_10_GMAIL_DELIVERY.md  PHASE_11_DEPLOYMENT.md  PHASE_12_README.md  PHASE_13_RELEASE_REHEARSAL.md  PHASE_14_BONUS_BOUNDARY.md  PHASE_15_EXTERNAL_ORCHESTRATION.md  PHASE_16_BONUS_REPORT.md  PHASE_17_OPTIONAL_Q_LEARNING.md  PHASE_18_INTEROP_MATCH.md  PHASE_1_FOUNDATION.md  PHASE_2_DOMAIN_MODEL.md  PHASE_3_GAME_RULES.md  PHASE_4_SERIES_REPLAY_REPORT.md  PHASE_5_HEURISTIC_AGENTS.md  PHASE_6_OBSERVATION_PROTOCOL.md  PHASE_7_MCP_SERVERS.md  PHASE_8_LOCAL_MCP_ORCHESTRATOR.md  PHASE_9_TERMINAL_LOGGING.md
reports/: agreed_interop_match_report.json
src/ai_agents_hw6/: __init__.py  cli.py  config.py
src/ai_agents_hw6/agents/: __init__.py  adapter.py  heuristic.py  learning.py  policy.py
src/ai_agents_hw6/application/: __init__.py  bonus.py  bonus_mock.py  events.py  (+6 more)
tests/: __init__.py
tests/unit/: __init__.py  test_bonus_boundary.py  test_bonus_orchestration.py  test_bonus_report_workflow.py  test_config.py  test_domain_model.py  test_fastmcp_host_client.py  test_game_rules.py  test_gmail_delivery.py  test_heuristic_agents.py  test_learning_evaluation.py  test_local_mcp_orchestrator.py  test_mcp_servers.py  test_observation_protocol.py  test_q_learning.py  test_rest_decide_bonus.py  test_series_and_report.py  test_terminal_ui.py
(+28 files in other folders)
